--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,160 @@
 .container {
-    width: 80%;
-    max-width: 1280px;
-    margin: 0 auto;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
 .header,
 .footer {
-	padding: 2% 0;
+  padding-top: 0;
 }
 
 .main {
-	padding: 2%;
+  padding: 2%;
 }
 
 .footer {
-	background-color: #666;
+  background-color: #666;
 
-	text-align: center;
-	color: #999;
+  text-align: center;
+  color: #999;
+}
+
+.header {
+  background: url("/images/promo_bg.jpg") no-repeat center top fixed;
+  background-clip: content-box;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+}
+
+h1 {
+  font-size: 36px;
+  color: #fff;
+  font-weight: bold;
+  line-height: 1.111;
+  text-align: center;
+  margin-top: 0;
+  padding-top: 33vh;
+}
+
+.header p {
+  font-size: 17px;
+  color: #fff;
+  line-height: 1.471;
+  text-align: center;
+  margin-bottom: 35px;
+  max-width: 620px;
+  position: relative;
+  left: 50%;
+  margin-left: -310px;
+}
+
+.button {
+  position: relative;
+  width: 500px;
+  left: 50%;
+  margin-left: -250px;
+  text-align: center;
+  transition: opacity 0.35s ease;
+  cursor: pointer;
+}
+
+.button a {
+  width: 200px;
+  padding: 12px 48px;
+  text-align: center;
+  color: white;
+  border: solid 1px white;
+  border-radius: 40px/30px;
+  text-transform: uppercase;
+}
+
+.button:hover {
+  opacity: 0.5;
+}
+
+.arrow {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  margin-left: -25px;
+  cursor: pointer;
+}
+
+.home-page,
+.about-page,
+.contact-page,
+.services-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h2 {
+  margin-top: 100px;
+  text-align: center;
+}
+
+p {
+  text-align: center;
+  margin-top: 15px;
+  max-width: 500px;
+  margin-bottom: 35px;
+}
+
+.home-page hr {
+  width: 150px;
+  height: 2px;
+  background-color: #2196f3;
+  border: 0;
+  margin-bottom: 80px;
+}
+
+.sl_ctr {
+  position: relative;
+  width: 1280px;
+  height: 720px;
+  overflow: hidden;
+} 
+
+.sldr {
+  position: relative;
+  width: 10000px;
+  height: 720px;
+
+}
+
+.sldr img {
+  float: left;
+  width: 1280px;
+  height: 720px;
+}
+
+.prv_b,
+.nxt_b {
+  position: absolute;
+  top: 360px;
+  display: block;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+.prv_b:hover,
+.nxt_b:hover {
+  opacity: 0.8;
+}
+
+.prv_b {
+  left: 10px;
+  background: url("/images/prv.png") no-repeat;
+}
+
+.nxt_b {
+  right: 10px;
+  background: url("/images/nxt.png") no-repeat;
 }
