--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,11 @@
 body {
 	margin: 0;
 	padding: 0;
+	font-family: 'Quicksand', sans-serif;
+	font-size: 16px;	
+	line-height: 1.111;
+}
 
-	background-color: #ededed;
-
-	font-family: 'Roboto', sans-serif;
+* {
+  box-sizing: border-box;
 }
