--- a/src/App.css
+++ b/src/App.css
@@ -4,76 +4,91 @@
   margin: 0 auto;
 }
 
-.header,
-.footer {
-  padding-top: 0;
-}
-
-.main {
-  padding: 2%;
-}
-
 .footer {
   background-color: #666;
-
   text-align: center;
   color: #999;
 }
 
 .header {
-  background: url("/images/promo_bg.jpg") no-repeat center top fixed;
+  background: url('/images/promo_bg.jpg') no-repeat center top fixed;
   background-clip: content-box;
   background-size: cover;
   background-position: center;
-  position: relative;
+  /* position: relative; */
   width: 100%;
   min-height: 100vh;
 }
 
 h1 {
-  font-size: 36px;
+  font-size: 54px;
   color: #fff;
   font-weight: bold;
-  line-height: 1.111;
   text-align: center;
   margin-top: 0;
-  padding-top: 33vh;
+  padding-top: 20vh;
+  margin-bottom: 20px;
 }
 
-.header p {
-  font-size: 17px;
-  color: #fff;
-  line-height: 1.471;
-  text-align: center;
-  margin-bottom: 35px;
-  max-width: 620px;
-  position: relative;
-  left: 50%;
-  margin-left: -310px;
-}
-
-.button {
-  position: relative;
+.img {
   width: 500px;
+  height: 500px;
+  position: absolute;
+  top: 50%;
   left: 50%;
-  margin-left: -250px;
-  text-align: center;
-  transition: opacity 0.35s ease;
-  cursor: pointer;
+  margin: -210px 0 0 -250px;
 }
 
-.button a {
+.img .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: background 0.5s ease;
+}
+
+.img:hover .overlay {
+  display: block;
+}
+
+.img .title {
+  position: absolute;
+  width: 500px;
+  left: 0;
+  top: 120px;
+  font-size: 24px;
+  line-height: 1.5;
+  text-align: center;
+  color: white;
+  z-index: 1;
+  transition: top 0.5s ease;
+}
+
+.img:hover .title {
+  top: 80px;
+}
+
+.img .button {
+  position: absolute;
+  width: 500px;
+  top: 40vh;
+  text-align: center;
+  opacity: 0;
+  transition: opacity 0.35s ease;
+}
+
+.img .button a {
   width: 200px;
   padding: 12px 48px;
   text-align: center;
   color: white;
-  border: solid 1px white;
-  border-radius: 40px/30px;
-  text-transform: uppercase;
+  border: solid 2px white;
+  z-index: 1;
 }
 
-.button:hover {
-  opacity: 0.5;
+.img:hover .button {
+  opacity: 1;
 }
 
 .arrow {
@@ -93,16 +108,20 @@ h1 {
   align-items: center;
 }
 
-h2 {
-  margin-top: 100px;
+section h2 {
+  margin-top: 80px;
   text-align: center;
+  color: #414a4f;
+  text-transform: capitalize;
+  margin-bottom: 35px;
 }
 
-p {
+section p {
   text-align: center;
   margin-top: 15px;
   max-width: 500px;
   margin-bottom: 35px;
+  line-height: 2;
 }
 
 .home-page hr {
@@ -115,28 +134,28 @@ p {
 
 .sl_ctr {
   position: relative;
-  width: 1280px;
-  height: 720px;
+  width: 128vh;
+  height: 72vh;
   overflow: hidden;
-} 
+}
 
 .sldr {
   position: relative;
   width: 10000px;
-  height: 720px;
-
+  height: 72vh;
 }
 
 .sldr img {
   float: left;
-  width: 1280px;
-  height: 720px;
+  width: 128vh;
+  height: 72vh;
+  border: 2px solid black;
 }
 
 .prv_b,
 .nxt_b {
   position: absolute;
-  top: 360px;
+  top: 36vh;
   display: block;
   width: 35px;
   height: 35px;
@@ -151,10 +170,12 @@ p {
 
 .prv_b {
   left: 10px;
-  background: url("/images/prv.png") no-repeat;
+  background: url('/images/prv.png') no-repeat;
 }
 
 .nxt_b {
   right: 10px;
-  background: url("/images/nxt.png") no-repeat;
+  background: url('/images/nxt.png') no-repeat;
 }
+
+
