--- a/src/Nav.css
+++ b/src/Nav.css
@@ -1,64 +1,112 @@
-* {
-  box-sizing: border-box;
-}
+/* .navigation {
+    position: relative;
+    top: -100vh;
+    margin: 0 auto;
+    margin-top: 4vh;
+  }
 
-.navigation {
-  position: relative;
-  top: -100vh;
-  margin: 0 auto;
-  margin-top: 4vh;
-}
+  ul {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 50%;
+  }
 
-ul {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 50%;
-}
+  ul li {
+    display: inline;
+    text-align: center;
+  }
 
-ul li {
-  display: inline;
-  text-align: center;
+  a {
+    display: inline-block;
+    width: 25%;
+    padding: 15px 20px;
+    margin: 0;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #fff;
+    opacity: 0.9;
+  }
+
+  a:hover{
+    opacity: 1;
+  }
+
+  .two:hover ~ hr {
+    margin-left: 25%;
+  }
+
+  .three:hover ~ hr {
+    margin-left: 50%;
+  }
+
+  .four:hover ~ hr {
+    margin-left: 75%;
+  }
+
+  .navigation hr {
+    height: 0.25rem;
+    width: 25%;
+    margin: 0;
+    background: #fff;
+    border: none;
+    transition: 0.5s ease-in-out;
+  }
+
+  .logo_header {
+      position: absolute;
+      top: 0;
+      left: 0;
+      margin-top: 25px;
+    } */
+
+ul,
+nav {
+  list-style: none;
 }
 
 a {
-  display: inline-block;
-  width: 25%;
-  padding: 15px 20px;
-  margin: 0;
   text-decoration: none;
-  text-transform: uppercase;
+  color: inherit;
+  cursor: pointer;
+
+  opacity: 0.9;
+}
+
+a:hover {
+  opacity: 1;
+}
+
+header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   color: #fff;
-	opacity: 0.9;
+  padding: 35px 100px 0;
 }
 
-a:hover{
-	opacity: 1;
+header nav {
+  display: flex;
 }
 
-.two:hover ~ hr {
-  margin-left: 25%;
+header nav li {
+  margin: 0 15px;
 }
 
-.three:hover ~ hr {
-  margin-left: 50%;
+header nav li:first-child {
+  margin-left: 0;
 }
 
-.four:hover ~ hr {
-  margin-left: 75%;
+header nav li:last-child {
+  margin-right: 0;
 }
 
-.navigation hr {
-  height: 0.25rem;
-  width: 25%;
-  margin: 0;
-  background: #fff;
-  border: none;
-  transition: 0.5s ease-in-out;
+header h2 img {
+  width: 150px;
+  height: auto;
 }
-
-.logo_header {
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
