--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,24 @@ body {
 
 * {
   box-sizing: border-box;
+	margin: 0;
+  padding: 0;
 }
+
+@media (max-width: 1000px){
+	header {
+		padding: 20px 50px;
+	}
+}
+
+
+@media (max-width: 700px){
+	header {
+		flex-direction: column;		
+	}
+
+	header h2{
+		margin-bottom: 15px;
+	}
+}
+
