--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
+/* Wrapper style */
 .container {
-  width: 100%;
+  width: 80%;
   max-width: 1280px;
   margin: 0 auto;
 }
 
+/* Main section style */
 .footer {
   background-color: #666;
   text-align: center;
@@ -15,11 +17,25 @@
   background-clip: content-box;
   background-size: cover;
   background-position: center;
-  /* position: relative; */
   width: 100%;
   min-height: 100vh;
 }
 
+.home-page,
+.works {
+  padding-bottom: 100px;
+}
+
+.home-page,
+.about-page,
+.contact-page,
+.works {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* Element style */
 h1 {
   font-size: 54px;
   color: #fff;
@@ -30,6 +46,7 @@ h1 {
   margin-bottom: 20px;
 }
 
+/* Button More style */
 .img {
   width: 500px;
   height: 500px;
@@ -45,7 +62,7 @@ h1 {
   left: 0;
   width: 100%;
   height: 100%;
-  transition: background 0.5s ease;
+  transition: 0.5s ease;
 }
 
 .img:hover .overlay {
@@ -91,6 +108,7 @@ h1 {
   opacity: 1;
 }
 
+/* Arrow style */
 .arrow {
   position: absolute;
   bottom: 0;
@@ -99,16 +117,9 @@ h1 {
   cursor: pointer;
 }
 
-.home-page,
-.about-page,
-.contact-page,
-.services-page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-section h2 {
+/* Section element style */
+.home-page h2,
+.works h2 {
   margin-top: 80px;
   text-align: center;
   color: #414a4f;
@@ -116,7 +127,8 @@ section h2 {
   margin-bottom: 35px;
 }
 
-section p {
+.home-page p,
+.works p {
   text-align: center;
   margin-top: 15px;
   max-width: 500px;
@@ -132,11 +144,13 @@ section p {
   margin-bottom: 80px;
 }
 
+/* Slider */
 .sl_ctr {
   position: relative;
   width: 128vh;
   height: 72vh;
   overflow: hidden;
+  border: 2px solid #2196f3;
 }
 
 .sldr {
@@ -149,7 +163,6 @@ section p {
   float: left;
   width: 128vh;
   height: 72vh;
-  border: 2px solid black;
 }
 
 .prv_b,
@@ -178,4 +191,85 @@ section p {
   background: url('/images/nxt.png') no-repeat;
 }
 
+/* Works section */
+.card1 {
+  position: relative;
+  top: 200px;
+  left: -20%;
+  transform: translate(-50%, -50%);
+  width: 320px;
+  height: 199px;
+  background: #262626;
+  overflow: hidden;
+}
+.card2 {
+  position: relative;
+  top: 200px;
+  left: 120%;
+  transform: translate(-50%, -50%);
+  width: 320px;
+  height: 200px;
+  background: #262626;
+  overflow: hidden;
+}
+.card3 {
+  position: relative;
+  top: 200px;
+  left: -20%;
+  transform: translate(-50%, -50%);
+  width: 320px;
+  height: 199px;
+  background: #262626;
+  overflow: hidden;
+}
 
+.card .imgBx,
+.card .details {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  box-sizing: border-box;
+  transition: 0.5s;
+}
+
+.card .imgBx {
+  top: 0;
+  left: 0;
+}
+
+.card:hover .imgBx {
+  top: 0;
+  left: -100%;
+}
+
+.card .imgBx img {
+  width: 100%;
+}
+
+.card .details {
+  background: #262626;
+  top: 0;
+  left: 100%;
+  padding: 20px 30px;
+}
+
+.card:hover .details {
+  top: 0;
+  left: 0%;
+}
+
+.card .details h2 {
+  color: #fff;
+  text-align: center;
+  font-size: 16px;	
+  margin: 0;
+  padding: 0 0 10px;
+  border-bottom: 2px solid #fff;
+}
+
+.card .details p {
+  margin: 20px 0 0;
+  color: #fff;
+  font-size: 14px;
+  text-align: center;
+}
