--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i&subset=cyrillic-ext');
 
-body {
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+html, body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Quicksand', sans-serif;
@@ -8,18 +15,12 @@ body {
 	line-height: 1.111;
 }
 
-* {
-  box-sizing: border-box;
-	margin: 0;
-  padding: 0;
-}
 
 @media (max-width: 1000px){
 	header {
 		padding: 20px 50px;
 	}
 }
-
 
 @media (max-width: 700px){
 	header {
