--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,9 @@
-/* Wrapper style */
 .container {
   width: 80%;
   max-width: 1280px;
   margin: 0 auto;
 }
 
-/* Main section style */
-.footer {
-  background-color: #666;
-  text-align: center;
-  color: #999;
-}
-
-.header {
-  background: url('/images/promo_bg.jpg') no-repeat center top fixed;
-  background-clip: content-box;
-  background-size: cover;
-  background-position: center;
-  width: 100%;
-  min-height: 100vh;
-}
-
-.home-page,
-.works {
-  padding-bottom: 100px;
-}
-
-.home-page,
-.about-page,
 .contact-page,
 .works {
   display: flex;
@@ -35,99 +11,15 @@
   align-items: center;
 }
 
-/* Element style */
-h1 {
-  font-size: 54px;
-  color: #fff;
-  font-weight: bold;
-  text-align: center;
-  margin-top: 0;
-  padding-top: 20vh;
-  margin-bottom: 20px;
-}
-
-/* Button More style */
-.img {
-  width: 500px;
-  height: 500px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: -210px 0 0 -250px;
-}
-
-.img .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transition: 0.5s ease;
-}
-
-.img:hover .overlay {
-  display: block;
-}
-
-.img .title {
-  position: absolute;
-  width: 500px;
-  left: 0;
-  top: 120px;
-  font-size: 24px;
-  line-height: 1.5;
-  text-align: center;
-  color: white;
-  z-index: 1;
-  transition: top 0.5s ease;
-}
-
-.img:hover .title {
-  top: 80px;
-}
-
-.img .button {
-  position: absolute;
-  width: 500px;
-  top: 40vh;
-  text-align: center;
-  opacity: 0;
-  transition: opacity 0.35s ease;
-}
-
-.img .button a {
-  width: 200px;
-  padding: 12px 48px;
-  text-align: center;
-  color: white;
-  border: solid 2px white;
-  z-index: 1;
-}
-
-.img:hover .button {
-  opacity: 1;
-}
-
-/* Arrow style */
-.arrow {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  margin-left: -25px;
-  cursor: pointer;
-}
-
 /* Section element style */
-.home-page h2,
 .works h2 {
-  margin-top: 80px;
+  margin-top: 20vh;
   text-align: center;
   color: #414a4f;
   text-transform: capitalize;
   margin-bottom: 35px;
 }
 
-.home-page p,
 .works p {
   text-align: center;
   margin-top: 15px;
@@ -136,140 +28,8 @@ h1 {
   line-height: 2;
 }
 
-.home-page hr {
-  width: 150px;
-  height: 2px;
-  background-color: #2196f3;
-  border: 0;
-  margin-bottom: 80px;
-}
 
-/* Slider */
-.sl_ctr {
-  position: relative;
-  width: 128vh;
-  height: 72vh;
-  overflow: hidden;
-  border: 2px solid #2196f3;
-}
 
-.sldr {
-  position: relative;
-  width: 10000px;
-  height: 72vh;
-}
 
-.sldr img {
-  float: left;
-  width: 128vh;
-  height: 72vh;
-}
 
-.prv_b,
-.nxt_b {
-  position: absolute;
-  top: 36vh;
-  display: block;
-  width: 35px;
-  height: 35px;
-  cursor: pointer;
-  opacity: 0.5;
-}
 
-.prv_b:hover,
-.nxt_b:hover {
-  opacity: 0.8;
-}
-
-.prv_b {
-  left: 10px;
-  background: url('/images/prv.png') no-repeat;
-}
-
-.nxt_b {
-  right: 10px;
-  background: url('/images/nxt.png') no-repeat;
-}
-
-/* Works section */
-.card1 {
-  position: relative;
-  top: 200px;
-  left: -20%;
-  transform: translate(-50%, -50%);
-  width: 320px;
-  height: 199px;
-  background: #262626;
-  overflow: hidden;
-}
-.card2 {
-  position: relative;
-  top: 200px;
-  left: 120%;
-  transform: translate(-50%, -50%);
-  width: 320px;
-  height: 200px;
-  background: #262626;
-  overflow: hidden;
-}
-.card3 {
-  position: relative;
-  top: 200px;
-  left: -20%;
-  transform: translate(-50%, -50%);
-  width: 320px;
-  height: 199px;
-  background: #262626;
-  overflow: hidden;
-}
-
-.card .imgBx,
-.card .details {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  box-sizing: border-box;
-  transition: 0.5s;
-}
-
-.card .imgBx {
-  top: 0;
-  left: 0;
-}
-
-.card:hover .imgBx {
-  top: 0;
-  left: -100%;
-}
-
-.card .imgBx img {
-  width: 100%;
-}
-
-.card .details {
-  background: #262626;
-  top: 0;
-  left: 100%;
-  padding: 20px 30px;
-}
-
-.card:hover .details {
-  top: 0;
-  left: 0%;
-}
-
-.card .details h2 {
-  color: #fff;
-  text-align: center;
-  font-size: 16px;	
-  margin: 0;
-  padding: 0 0 10px;
-  border-bottom: 2px solid #fff;
-}
-
-.card .details p {
-  margin: 20px 0 0;
-  color: #fff;
-  font-size: 14px;
-  text-align: center;
-}
