--- a/src/App.css
+++ b/src/App.css
@@ -149,6 +149,7 @@ h1 {
   position: relative;
   width: 128vh;
   height: 72vh;
+  border: 2px solid black;
   overflow: hidden;
   border: 2px solid #2196f3;
 }
