--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,18 @@
-.container {
+.wrapper {
   width: 80%;
   max-width: 1280px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
-.contact-page,
-.works {
+.contact-page {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-/* Section element style */
-.works h2 {
-  margin-top: 20vh;
-  text-align: center;
-  color: #414a4f;
-  text-transform: capitalize;
-  margin-bottom: 35px;
-}
-
-.works p {
-  text-align: center;
-  margin-top: 15px;
-  max-width: 500px;
-  margin-bottom: 35px;
-  line-height: 2;
-}
 
 
 
