--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 html, body {
 	margin: 0;
 	padding: 0;
+	height: 100%;
 	font-family: 'Quicksand', sans-serif;
 	font-size: 16px;	
 	line-height: 1.111;
