--- a/src/Services.css
+++ b/src/Services.css
@@ -30,7 +30,8 @@
 
 /* Hover IMG */
 .videos__item {
-  transform: translate(-50%,-50%);
+  /*transform: translate(-50%,-50%);*/
+  position: relative;
   width: 320px;
   height: 200px;
   overflow: hidden;
@@ -39,7 +40,6 @@
 .videos__item .details {
   width: 100%;
   height: 100%;
-  position: absolute;
   box-sizing: border-box;
   transition: .5s;
 }
@@ -48,8 +48,12 @@
   left: 0;
 }
 .videos__item:hover .imgBx {
+  position: relative;
   top: 0;
   left: -100%;
+}
+.videos__item:hover .details {
+  position: absolute;
 }
 .videos__item .imgBx img {
   width: 100%;
