--- a/src/Contact.css
+++ b/src/Contact.css
@@ -1,34 +1,164 @@
-.contact-page {
-  flex: 1 0 auto;
+.contact-page h2 {
+  margin-top: 20vh;
+  text-align: center;
+  color: #414a4f;
+  text-transform: capitalize;
+  margin-bottom: 35px;
 }
 
-.flex-container {
-    display: flex; /* Флексы */
-    height: 300px; /* Высота */
-    width:100%;
-    color: #fff; /* Белый цвет текста */
-    font-size: 2.6em; /* Размер шрифта */
-    flex-flow: column wrap; /* Располагаем в виде колонок */
+.reviews h2,
+.contact h2 {
+  text-align: center;
+  color: #414a4f;
+  text-transform: capitalize;
+  margin-bottom: 35px;
+}
+
+.contact-page p,
+.reviews p,
+.contact p {
+  text-align: center;
+  margin-top: 15px;
+  max-width: 500px;
+  margin-bottom: 20px;
+  line-height: 2;
+  padding: 0;
+}
+
+.contact-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-page hr,
+.contact hr {
+  width: 150px;
+  height: 2px;
+  background-color: #2196f3;
+  border: 0;
+  margin-bottom: 80px;
+}
+
+ul.grid {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.contact-page .grid li {
+  padding: 0 30px;
+  flex-basis: 33%;
+  text-align: center;
+}
+
+.contact-page .grid li i {
+  font-size: 50px;
+  color: #2196f3;
+  margin-bottom: 25px;
+}
+
+.contact-page .grid li h4 {
+  color: #555;
+  font-size: 20px;
+  margin-bottom: 25px;
+}
+
+.contact-page .grid li p {
+  margin: 0;
+}
+
+@media (max-width: 1000px) {
+  .contact-page .grid li {
+    flex-basis: 70%;
+    margin-bottom: 65px;
   }
-  .flex-item {
-    display: flex; /* Флексы */
-    align-items: center; /* Выравнивание текста по вертикали */
-    justify-content: center; /* Выравнивание текста по горизонтали */
+
+  .contact-page .grid li:last-child {
+    margin-bottom: 0;
   }
-  .one {
-    background: #508694; /* Цвет фона */
-    margin-right: 10px; /* Отступ справа */
+}
+
+@media (max-width: 600px) {
+  .contact-page .grid li {
     flex-basis: 100%;
-    order: 1; /* Первый блок */
   }
-  .two {
-    background: #bb844c; /* Цвет фона */
-    margin-bottom: 10px; /* Отступ снизу */
-    flex: 1 1 0;
-    order: 2; /* Второй блок */
+}
+
+/*--------------------
+ 	Reviews Section
+--------------------*/
+.reviews {
+  display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 125px 100px;
+}
+
+.reviews .author {
+  font-size: 18px;
+  margin-bottom: 50px;
+}
+
+.reviews .author:last-child {
+  margin-bottom: 0;
+}
+
+@media (max-width: 1000px) {
+  .reviews .quote {
+    font-size: 20px;
   }
-  .three {
-    background: #929d79; /* Цвет фона */
-    flex: 1 1 0;
-    order: 3; /* Третий блок */
+
+  .reviews .author {
+    font-size: 16px;
   }
+}
+
+/*---------------------
+ 	Contact Section
+---------------------*/
+
+.contact {
+  display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 125px 100px;
+}
+
+.contact form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 800px;
+  width: 80%;
+}
+
+.contact form input {
+  padding: 15px;
+  flex: 1;
+  margin-right: 30px;
+  font-size: 18px;
+  color: #555;
+}
+
+.contact form .btn {
+  padding: 18px 42px;
+}
+
+a.btn {
+  color: #fff;
+  border-radius: 4px;
+  text-transform: uppercase;
+  background-color: #2196F3;
+  font-weight: 800;
+  text-align: center;
+}
+
+@media (max-width: 800px) {
+  .contact form input {
+    flex-basis: 100%;
+    margin: 0 0 20px 0;
+  }
+}
