--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,7 +1,46 @@
-.footer {
-  background-color: #666;
-  text-align: center;
-  color: #999;
-  flex: 0 0 auto;
-  margin-top: 20px;
+/*-------------
+ 	Footer
+-------------*/
+
+footer{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	color: #fff;
+	background-color: #414a4f;
+	padding: 10px 0;
+}
+
+footer ul{
+	display: flex;
+	font-size: 32px;
+}
+
+footer ul li{
+	margin: 0 8px;	
+}
+
+footer ul li:first-child{
+	margin-left: 0;	
+}
+
+footer ul li:last-child{
+	margin-right: 0;	
+}
+
+footer p{
+	text-transform: uppercase;
+	font-size: 14px;
+	color: rgba(255,255,255,0.6);
+	margin-bottom: 10px;
+}
+
+
+@media (max-width: 700px){
+
+	footer{
+		padding: 30px 5px;
+	}
+
 }
