--- a/src/Header.css
+++ b/src/Header.css
@@ -43,7 +43,7 @@ h1 {
 
 .img .title {
   position: absolute;
-  width: 500px;
+  max-width: 500px;
   left: 0;
   top: 120px;
   font-size: 24px;
@@ -73,6 +73,7 @@ h1 {
   text-align: center;
   color: white;
   border: solid 2px white;
+  border-radius: 50px;
   z-index: 1;
 }
 
@@ -95,5 +96,31 @@ h1 {
 
 	header h2{
 		margin-bottom: 15px;
-	}
+  }
+  
+  .img {
+    width: 300px;
+    height: 300px;
+    margin: -250px 0 0 -150px;
+  }
+
+  .img .title {
+    font-size: 18px;
+  }
+
+  .img .button {
+    width: 200px;
+    top: 50vh;
+    left: 6vh;
+  }
+
+  h1 {
+    font-size: 40px;
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 0;
+    padding-top: 20vh;
+    margin-bottom: 20px;
+  }
 }
