--- a/src/Nav.css
+++ b/src/Nav.css
@@ -50,19 +50,14 @@ ul a:hover {
 /* Навигация не на главной странице */
 .navigator nav:not(.home) {
   font-weight: bold;
-  color: #000;
+  color: #797979;
 }
 
 .navigator-other {
-  opacity: 0.5;
-  background-color: rgb(248, 234, 234);
+  background-color: rgba(33, 150, 243, .2);
   padding-bottom: 35px;
 }
-/* .navigator:not(.home) {
-  opacity: 0.5;
-  background-color: rgb(248, 234, 234);
-  padding-bottom: 35px;
-} */
+
 
 .nav_toggle {
   display: none;
