--- a/src/Services.css
+++ b/src/Services.css
@@ -41,7 +41,7 @@
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  transition: .5s;
+  transition: 1.2s;
 }
 .videos__item .imgBx {
   top: 0;
@@ -94,7 +94,7 @@
 .videos__wrapper .videos__item {
   width: 320px;
   height: 199px;
-  margin: 40px;
+  margin: 1vh 5vh;
   transition: 1s all;
   cursor: pointer;
   box-shadow: 0 0 30px rgba(0, 0, 0, .3)
@@ -108,10 +108,17 @@
   transform: translateY(50px)
 }
 
+@media (max-width: 420px) {
+  .videos__wrapper .videos__item {
+    margin: 1vh 0;
+  }
+}
+
 .more {
   display: block;
   width: 180px;
   height: 40px;
+  margin: 50px 0 !important;
   margin: 0 auto;
   border: none;
   outline: 0;
