--- a/src/About.css
+++ b/src/About.css
@@ -42,30 +42,32 @@
   padding: 40px;
   width: 100%;
   color: #333;
-  
 }
 
 /* SLIDER */
 .slick-slide img {
   height: 72vh;
-  width: 128vh;
+  width: 1280px;
   /* border: 2px solid #000; */
 }
+
 .slick-slider {
   margin: 5px auto 20px;
 }
+
 .slick-dots {
   margin-left: 0;
 }
+
 .slick-arrow {
-  opacity: .7;
+  opacity: 0.7;
 }
+
 .slick-arrow:hover {
   opacity: 0.9;
 }
-.slick-next:before, .slick-prev:before {
+
+.slick-next:before,
+.slick-prev:before {
   color: #000;
 }
-
-
-
