--- a/src/Nav.css
+++ b/src/Nav.css
@@ -47,10 +47,17 @@ ul a:hover {
   height: auto;
 }
 
-/* Навигация не на главной странице */
+/* NAV not on Home page */
+
 .navigator nav:not(.home) {
   font-weight: bold;
   color: #797979;
+}
+
+.other-page {
+  color: #fff;
+  font-size: 20px;
+  text-shadow: 0 0 20px rgba(0, 0, 0, .7);  
 }
 
 .navigator-other {
@@ -58,14 +65,26 @@ ul a:hover {
   padding-bottom: 35px;
 }
 
-
 .nav_toggle {
   display: none;
 }
 
 @media (max-width: 1024px) {
+  .navigator {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .navigator ul {
+    margin-top: 2vh;
+  }
+
   .nav_toggle {
     display: block;
+    position: absolute;
+    left: 50%;
+    margin-right: 8.5px;
+    margin-top: 1vh;
   }
 
   .navigator nav li {
