--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i&subset=cyrillic-ext');
 
-
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-html, body {
-	margin: 0;
-	padding: 0;
-	height: 100%;
-	font-family: 'Quicksand', sans-serif;
-	font-size: 16px;	
-	line-height: 1.111;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 16px;
+  line-height: 1.111;
 }
