--- a/src/About.css
+++ b/src/About.css
@@ -29,6 +29,12 @@
   text-transform: capitalize;
   margin-bottom: 35px;
 }
+
+@media (max-width: 320px) {
+  .about-page {
+    margin-top: 0;
+  }
+}
 .about-page hr {
   width: 150px;
   height: 2px;
@@ -45,7 +51,7 @@
 }
 
 /* SLIDER */
-.slick-slide img {
+.slick-slider img {
   height: 72vh;
   width: 1280px;
   /* border: 2px solid #000; */
@@ -70,4 +76,11 @@
 .slick-next:before,
 .slick-prev:before {
   color: #000;
+}
+
+@media (max-width: 700px) {
+  .slick-list {
+    height: 40vh;
+    width: auto;
+  }
 }
