--- a/src/Header.css
+++ b/src/Header.css
@@ -82,18 +82,23 @@ h1 {
   opacity: 1;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1024px) {
   header {
     padding: 20px 50px;
   }
 }
 
 @media (max-width: 700px) {
-  header {
+  .title,
+  .button {
+    margin-top: 7vh;
+  }
+
+  .header {
     flex-direction: column;
   }
 
-  header h2 {
+  .header h1 {
     margin-bottom: 15px;
   }
 
@@ -104,22 +109,36 @@ h1 {
   }
 
   .img .title {
-    font-size: 18px;
+    font-size: 22px;
   }
 
   .img .button {
     width: 200px;
     top: 50vh;
-    left: 6vh;
+    left: 10vh;
   }
 
   h1 {
-    font-size: 40px;
+    font-size: 28px;
     color: #fff;
     font-weight: bold;
     text-align: center;
     margin-top: 0;
     padding-top: 20vh;
     margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 320px) {
+  h1 {
+    margin-top: 80px;
+  }
+
+  .title {
+    margin-top: 120px;
+  }
+
+  .button {
+    margin-top: 100px;
   }
 }
